Added README and some changes